fixed registration bug

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class = "loginForm">
         <form action="login.php" method="POST">
             Email:<br>
-            <input type = "text" name= "enterEmail" required>
+            <input type = "text" name= "enterEmail" required />
             <br>Password:<br>
-            <input type="password" name="enterPassword" required>
+            <input type="password" name="enterPassword" required />
             <input type="submit" name="loginSubmit" class="formButton" value="submit">
             <input type="reset" name="loginCancel" id="cancelLogin" class="formButton" onclick="hideLogin()" value="cancel">
         </form>
@@ -28,7 +28,7 @@
     <div class = "signUpForm">
         <form action="signUp.php" method="POST">
             Register Email:<br>
-            <input type = "text" name= "registerEmail" required>
+            <input type = "text" name="registerEmail" required>
             <br>Register Password:<br>
             <input type="password" name="registerPassword" required>
             <input type="submit" name="registerSubmit" class="formButton" value="submit">
