--- a/loginScreen.html
+++ b/loginScreen.html
@@ -1,10 +1,27 @@
 <!Doctype html>
 <html>
 <head>
+    <link href="style/style.css" type "text/css" rel="stylesheet">
+    <link href="style/loginScreen.css" type "text/css" rel="stylesheet">
     <title>Welcome</title>
 </head>
 
 <body>
-    <h1> Welcome!</h1>
+    <div class = "background">
+
+        <div class = "header">
+        <h1> Welcome!</h1>
+        </div>
+
+        <div class = "signOut">
+            <a class = "button" id= "signOut">Sign Out </a>
+        </div>
+
+        <div class = "actions">
+            <a class = "button" id="startMessage">Message</a>
+            <a class = "button" id="viewMessages">View Messages</a>
+        </div>
+
+    </div>
 </body>
 </html>
